Fixing font on mobile

--- a/styles.css
+++ b/styles.css
@@ -259,7 +259,7 @@ a:hover {
 
 @media (min-width: 768px) {
     .title h1 {
-        font-size: 60px;
+        font-size: 50px;
     }
     .text-info {
         font-size: 3vh;
